--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ca.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Components bàsics
 border-color=Color de la vora (Automatic Translation)
 card=Targeta
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Títol (Automatic Translation)
 heading-level=Nivell de títol (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Secundari
 slider=Control lliscant
