--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_el.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_el.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Βασικά εξαρτήματα (Automatic Translation)
 border-color=Χρώμα περιγράμματος (Automatic Translation)
 card=Κάρτα (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=Η2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Επικεφαλίδα (Automatic Translation)
 heading-level=Επίπεδο επικεφαλίδας (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Δευτεροβάθμια (Automatic Translation)
 slider=Ρυθμιστικό (Automatic Translation)
