--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_et.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_et.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Põhilised komponendid (Automatic Translation)
 border-color=Äärise värv (Automatic Translation)
 card=Kaardi (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Pealkiri (Automatic Translation)
 heading-level=Pealkirja tase (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Teisese (Automatic Translation)
 slider=Liugur (Automatic Translation)
