--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_hu.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Alapkomponensek
 border-color=Szegélyszín (Automatic Translation)
 card=Kártya
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Címsor (Automatic Translation)
 heading-level=Címsorszint (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Másodlagos
 slider=Csúszka
