--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_it.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_it.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Componenti di base (Automatic Translation)
 border-color=Colore bordo (Automatic Translation)
 card=biglietto d'auguri (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=titolo (Automatic Translation)
 heading-level=Livello di intestazione (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=secondario (Automatic Translation)
 slider=Cursore (Automatic Translation)
