--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ru.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Основные компоненты (Automatic Translation)
 border-color=Пограничный цвет (Automatic Translation)
 card=Карте (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Заголовок (Automatic Translation)
 heading-level=Заголовок Уровень (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Вторичного (Automatic Translation)
 slider=Ползунок (Automatic Translation)
