--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_th.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_th.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=ส่วนประกอบพื้นฐาน (Automatic Translation)
 border-color=สีเส้นขอบ (Automatic Translation)
 card=บัตร (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=หัว เรื่อง (Automatic Translation)
 heading-level=ระดับหัวเรื่อง (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=รอง (Automatic Translation)
 slider=แถบ เลื่อน (Automatic Translation)
