--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_zh_TW.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=基本元件 (Automatic Translation)
 border-color=邊框顏色 (Automatic Translation)
 card=卡 (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=標題 (Automatic Translation)
 heading-level=標題級別 (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=二 次 (Automatic Translation)
 slider=滑 塊 (Automatic Translation)
