--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ar.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=المكونات الأساسية (Automatic Translation)
 border-color=لون الحدود (Automatic Translation)
 card=بطاقه (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=عنوان (Automatic Translation)
 heading-level=مستوى العنوان (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=الثانويه (Automatic Translation)
 slider=المنزلق (Automatic Translation)
