--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_bg.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Основни компоненти (Automatic Translation)
 border-color=Цвят на границата (Automatic Translation)
 card=Карта (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Позиция (Automatic Translation)
 heading-level=Ниво на заглавие (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Вторични (Automatic Translation)
 slider=Плъзгача (Automatic Translation)
