--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_cs.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Základní součásti (Automatic Translation)
 border-color=Barva ohraničení (Automatic Translation)
 card=Karty (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Čísla (Automatic Translation)
 heading-level=Úroveň nadpisu (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Sekundární (Automatic Translation)
 slider=Jezdec (Automatic Translation)
