--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_es.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_es.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Componentes básicos
 border-color=Color del borde (Automatic Translation)
 card=Tarjeta
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=encabezado (Automatic Translation)
 heading-level=Nivel de dirección (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Secundario
 slider=Control deslizante
