--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_fr.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Composants de base
 border-color=Couleur de frontière (Automatic Translation)
 card=Carte
+fit=Fit (Automatic Copy)
 h1=H1 (h1) (Automatic Translation)
 h2=H2 (H2) (Automatic Translation)
 h3=H3 (H3) (Automatic Translation)
 h4=H4 (en) (Automatic Translation)
 heading=titre (Automatic Translation)
 heading-level=Niveau de cap (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Secondaire
 slider=Curseur
