--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_in.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_in.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Komponen dasar (Automatic Translation)
 border-color=Border warna (Automatic Translation)
 card=Kartu (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Menuju (Automatic Translation)
 heading-level=Tingkat tajuk (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Sekunder (Automatic Translation)
 slider=Slider (Automatic Translation)
