--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_iw.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=רכיבים בסיסיים (Automatic Translation)
 border-color=צבע גבול (Automatic Translation)
 card=כרטיס (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=כותרת (Automatic Translation)
 heading-level=רמת כותרת (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=שני (Automatic Translation)
 slider=מחוון (Automatic Translation)
