--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_kk.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_kk.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Basic Components (Automatic Copy)
 border-color=Border Color (Automatic Copy)
 card=Card (Automatic Copy)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Copy)
 h2=H2 (Automatic Copy)
 h3=H3 (Automatic Copy)
 h4=H4 (Automatic Copy)
 heading=Heading (Automatic Copy)
 heading-level=Heading Level (Automatic Copy)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Secondary (Automatic Copy)
 slider=Slider (Automatic Copy)
