--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ko.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=기본 구성 요소 (Automatic Translation)
 border-color=테두리 색상 (Automatic Translation)
 card=카드 (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=제목 (Automatic Translation)
 heading-level=제목 레벨 (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=보조 (Automatic Translation)
 slider=슬라이더 (Automatic Translation)
