--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_lt.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Pagrindiniai komponentai (Automatic Translation)
 border-color=Kraštinių spalva (Automatic Translation)
 card=Kortelės (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 receptorių (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Antraštė (Automatic Translation)
 heading-level=Antraštės lygis (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Antrinės (Automatic Translation)
 slider=Slankiklį (Automatic Translation)
