--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_nb.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Grunnleggende komponenter (Automatic Translation)
 border-color=Kantlinje-farge (Automatic Translation)
 card=Kort (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Overskriften (Automatic Translation)
 heading-level=Overskriftsnivå (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Sekundær (Automatic Translation)
 slider=Glidebryteren (Automatic Translation)
