--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_pl.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Podstawowe komponenty (Automatic Translation)
 border-color=Kolor obramowania (Automatic Translation)
 card=Karty (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Pozycji (Automatic Translation)
 heading-level=Poziom nagłówka (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Pomocniczy (Automatic Translation)
 slider=Suwak (Automatic Translation)
