--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_pt_BR.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Componentes Básicos
 border-color=Cor da borda (Automatic Translation)
 card=Cartão
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Indo (Automatic Translation)
 heading-level=Nível de título (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Secundário
 slider=Controle Deslizante
