--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ro.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Componente de bază (Automatic Translation)
 border-color=Culoare bordură (Automatic Translation)
 card=Card (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Rubrica (Automatic Translation)
 heading-level=Nivel titlu (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Secundar (Automatic Translation)
 slider=Glisorul (Automatic Translation)
