--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_sl.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Osnovne komponente (Automatic Translation)
 border-color=Barva obrobe (Automatic Translation)
 card=Kartico (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Naslov (Automatic Translation)
 heading-level=Raven naslova (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Sekundarni (Automatic Translation)
 slider=Drsnik (Automatic Translation)
