--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_tr.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Temel bileşenler (Automatic Translation)
 border-color=Kenarlık rengi (Automatic Translation)
 card=Kartı (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Başlık (Automatic Translation)
 heading-level=Başlık düzeyi (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Ikincil (Automatic Translation)
 slider=Kaydırıcı (Automatic Translation)
