--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_uk.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=Основні компоненти (Automatic Translation)
 border-color=Колір рамок (Automatic Translation)
 card=Картки (Automatic Translation)
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=Заголовок (Automatic Translation)
 heading-level=Заголовок рівня (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=Вторинний (Automatic Translation)
 slider=Повзунок (Automatic Translation)
