--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_zh_CN.properties
@@ -2,12 +2,15 @@ align=Align (Automatic Copy)
 basic-components=基本组件
 border-color=边框颜色 (Automatic Translation)
 card=卡片
+fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
 h3=H3 (Automatic Translation)
 h4=H4 (Automatic Translation)
 heading=标题 (Automatic Translation)
 heading-level=标题级别 (Automatic Translation)
+image-size=Image Size (Automatic Copy)
+original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
 secondary=辅助
 slider=滑块
