--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -55,6 +55,7 @@ prioritize-experience=Приоритизирайте опита (Automatic Trans
 publish-page=Публикуване на страница (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Намаляване на броя на колоните ще загубят съдържание, добавени в изтрити колони. Наистина ли искате да продължите? (Automatic Translation)
 remove-background=Премахни фона (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Възстановяване на стойности (Automatic Translation)
 saved=Записани (Automatic Translation)
 saving-changes=Записване на промени... (Automatic Translation)
