--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -55,6 +55,7 @@ prioritize-experience=Élmény prioritása magas
 publish-page=Oldal közzététele
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Az oszlopok számának csökkentése a törölt oszlopok tartalmának elvesztésével jár. Kívánja folytatni?
 remove-background=Háttér eltávolítása
+reopen=Reopen (Automatic Copy)
 restore-values=Értékek visszaállítása
 saved=Mentve
 saving-changes=Módosítások mentése...
