--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -55,6 +55,7 @@ prioritize-experience=Pirmenybė patirčiai (Automatic Translation)
 publish-page=Skelbti puslapis (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Stulpelių skaičiaus mažinimas bus prarasti pridėti prie panaikintų stulpelių turinys. Ar tikrai norite tęsti? (Automatic Translation)
 remove-background=Pašalinti foną (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Atkurti reikšmes (Automatic Translation)
 saved=Išsaugota (Automatic Translation)
 saving-changes=Išsaugoti pakeitimus... (Automatic Translation)
