--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -55,6 +55,7 @@ prioritize-experience=Prioriter opplevelse (Automatic Translation)
 publish-page=Publiser side (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Redusere antall kolonner vil miste innholdet lagt til de slettede kolonnene. Er du sikker på at du vil fortsette? (Automatic Translation)
 remove-background=Fjern bakgrunn (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Gjenopprett verdier (Automatic Translation)
 saved=Lagret (Automatic Translation)
 saving-changes=Lagrer endringer... (Automatic Translation)
