--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -55,6 +55,7 @@ prioritize-experience=Tecrübe önceliğini belirleme (Automatic Translation)
 publish-page=Yayımla sayfası (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Sütun sayısını azaltmak için Silinen sütunlar eklenen içeriği kaybedeceksiniz. Devam etmek istediğinizden emin misiniz? (Automatic Translation)
 remove-background=Arka planı kaldır (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Geri yükleme değerleri (Automatic Translation)
 saved=Kaydedilen (Automatic Translation)
 saving-changes=Değişiklikleri kaydediliyor... (Automatic Translation)
