--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -55,6 +55,7 @@ prioritize-experience=تحديد أولوية الخبرة
 publish-page=نشر الصفحة
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=تقليل عدد الأعمدة سيؤدي إلى فقدان المحتوى المضاف إلى الأعمدة المحذوفة. هل أنت متأكد من أنك تريد المتابعة؟
 remove-background=إزالة الخلفية
+reopen=Reopen (Automatic Copy)
 restore-values=استعادة القيم
 saved=محفوظ
 saving-changes=جار حفظ التغييرات...
