--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -55,6 +55,7 @@ prioritize-experience=Prioritza l'experiència
 publish-page=Publica la pàgina
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reduir el nombre de columnes farà que es perdi el contingut afegit a les columnes suprimides. Segur que voleu continuar?
 remove-background=Treu el fons
+reopen=Reopen (Automatic Copy)
 restore-values=Restaura els valors
 saved=Modificat
 saving-changes=S'estan desant els canvis...
