--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -55,6 +55,7 @@ prioritize-experience=Erlebnis priorisieren
 publish-page=Seite veröffentlichen
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Wenn Sie die Anzahl der Spalten reduzieren, geht der Inhalt verloren, der den gelöschten Spalten hinzugefügt wurde. Sind Sie sicher, dass Sie fortfahren möchten?
 remove-background=Hintergrund entfernen
+reopen=Reopen (Automatic Copy)
 restore-values=Werte wiederherstellen
 saved=Gespeichert
 saving-changes=Änderungen werden gespeichert...
