--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -55,6 +55,7 @@ prioritize-experience=Προτεραιότητα εμπειρίας (Automatic T
 publish-page=Δημοσίευση σελίδας (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Μείωση του αριθμού των στηλών θα χάσετε περιεχομένου που προστίθενται στις στήλες διαγράφεται. Είστε βέβαιοι ότι θέλετε να συνεχίσετε; (Automatic Translation)
 remove-background=Κατάργηση φόντου (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Επαναφορά τιμών (Automatic Translation)
 saved=Αποθηκεύτηκε σε (Automatic Translation)
 saving-changes=Αποθήκευση των αλλαγών... (Automatic Translation)
