--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -55,6 +55,7 @@ prioritize-experience=Aumentar prioridad de experiencia
 publish-page=Publicar página
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Al reducir el número de columnas, se perderá el contenido añadido a las columnas eliminadas. ¿Está seguro de que quiere continuar?
 remove-background=Quitar fondo
+reopen=Reopen (Automatic Copy)
 restore-values=Restaurar valores
 saved=Guardado
 saving-changes=Guardando cambios…
