--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -55,6 +55,7 @@ prioritize-experience=Tähtsusjärjesta kogemus (Automatic Translation)
 publish-page=Lehe avaldamine (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Veergude arvu ise sisu on kustutatud veerud. Kas soovite kindlasti jätkata? (Automatic Translation)
 remove-background=Eemalda taust (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Taasta väärtused (Automatic Translation)
 saved=Salvestatud (Automatic Translation)
 saving-changes=Muudatused... (Automatic Translation)
