--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -55,6 +55,7 @@ prioritize-experience=اولویت بندی تجربه (Automatic Translation)
 publish-page=صفحه را منتشر (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=کاهش تعداد ستون مطالب اضافه شده به ستون های حذف شده از دست خواهد داد. آیا می خواهید ادامه دهید؟ (Automatic Translation)
 remove-background=حذف پس زمینه (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=برگرداندن مقادیر (Automatic Translation)
 saved=ذخیره شده
 saving-changes=ذخیره تغییرات... (Automatic Translation)
