--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -55,6 +55,7 @@ prioritize-experience=Priorisoi Kokemus
 publish-page=Julkaise Sivu
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Sarakkeiden määrän vähentäminen hävittää poistettuihin sarakkeisiin liittyvän sisällön. Oletko varma, että haluat jatkaa?
 remove-background=Poista Tausta
+reopen=Reopen (Automatic Copy)
 restore-values=Palauta Arvot
 saved=Tallennettu
 saving-changes=Tallennetaan muutokset...
