--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -55,6 +55,7 @@ prioritize-experience=Prioritaskan pengalaman (Automatic Translation)
 publish-page=Mempublikasikan Halaman (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Mengurangi jumlah kolom akan kehilangan konten yang ditambahkan ke kolom dihapus. Apakah Anda yakin Anda ingin melanjutkan? (Automatic Translation)
 remove-background=Hapus background (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Pulihkan nilai (Automatic Translation)
 saved=Disimpan (Automatic Translation)
 saving-changes=Menyimpan perubahan... (Automatic Translation)
