--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -55,6 +55,7 @@ prioritize-experience=Dare priorità all'esperienza (Automatic Translation)
 publish-page=Pubblicare la pagina (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Riducendo il numero di colonne perderà il contenuto aggiunto a colonne eliminate. Sei sicuro di che voler procedere? (Automatic Translation)
 remove-background=Rimuovi sfondo (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Ripristina valori (Automatic Translation)
 saved=Salvato (Automatic Translation)
 saving-changes=Salvare le modifiche... (Automatic Translation)
