--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -55,6 +55,7 @@ prioritize-experience=מתן עדיפות לניסיון (Automatic Translation)
 publish-page=פרסום דף (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=הפחתת מספר העמודות, תאבד את התוכן שנוסף לעמודות שנמחקו. האם אתה בטוח שברצונך להמשיך? (Automatic Translation)
 remove-background=הסר רקע (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=שחזור ערכים (Automatic Translation)
 saved=הציל (Automatic Translation)
 saving-changes=שמירת שינויים... (Automatic Translation)
