--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -55,6 +55,7 @@ prioritize-experience=エクスペリエンスの優先度を上げる
 publish-page=ページを公開
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=カラム数を減らすと、削除されたカラムに追加されていたコンテンツは失われます。実行してもよろしいですか？
 remove-background=背景を削除
+reopen=Reopen (Automatic Copy)
 restore-values=値の復元
 saved=保存済み
 saving-changes=変更を保存しています...
