--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -55,6 +55,7 @@ prioritize-experience=Ervaring prioritair maken
 publish-page=Pagina publiceren
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Door het aantal kolommen te verminderen, zal de inhoud die aan de verwijderde kolommen is toegevoegd, verloren gaan. Weet u zeker dat u wilt doorgaan?
 remove-background=Achtergrond verwijderen
+reopen=Reopen (Automatic Copy)
 restore-values=Waarden herstellen
 saved=Opgeslagen
 saving-changes=Wijzigingen opslaan ...
