--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -55,6 +55,7 @@ prioritize-experience=Priorytetyzacja doświadczenia (Automatic Translation)
 publish-page=Opublikować stronę (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zmniejszenie liczby kolumn spowoduje utratę treści dodawane do kolumny usunięte. Czy na pewno chcesz kontynuować? (Automatic Translation)
 remove-background=Usuń tło (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Przywróć wartości (Automatic Translation)
 saved=Zapisano na (Automatic Translation)
 saving-changes=Zapisywanie zmian... (Automatic Translation)
