--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -55,6 +55,7 @@ prioritize-experience=Приоритетность опыта (Automatic Transla
 publish-page=Страница публикации (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Сокращение числа столбцов потеряет содержимое, добавленное на удаленные столбцы. Вы уверены, что вы хотите продолжить? (Automatic Translation)
 remove-background=Удаление фона (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Восстановление значений (Automatic Translation)
 saved=Сохраненные (Automatic Translation)
 saving-changes=Сохранение изменений... (Automatic Translation)
