--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -55,6 +55,7 @@ prioritize-experience=Prednost izkušnje (Automatic Translation)
 publish-page=Objaviti stran (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zmanjšanje števila stolpcev izgubili vsebino dodati izbrisane stolpce. Ali ste prepričani, da želite nadaljevati? (Automatic Translation)
 remove-background=Odstrani ozadje (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Obnovi vrednosti (Automatic Translation)
 saved=Shranjene (Automatic Translation)
 saving-changes=Zimski... (Automatic Translation)
