--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -55,6 +55,7 @@ prioritize-experience=Prioritera upplevelse
 publish-page=Publicera sidan
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Om du minskar antalet kolumner förloras innehåll som läggs till i borttagna kolumner. Vill du verkligen fortsätta?
 remove-background=Ta bort bakgrund
+reopen=Reopen (Automatic Copy)
 restore-values=Återställ värden
 saved=Sparat
 saving-changes=Sparar ändringar...
