--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -55,6 +55,7 @@ prioritize-experience=Досвід пріоритезації (Automatic Transla
 publish-page=Опублікувати сторінку (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Зменшення кількості стовпців втратить зміст, додані до видалені стовпці. Справді продовжити? (Automatic Translation)
 remove-background=Видалити фон (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Відновити значення (Automatic Translation)
 saved=Збережені (Automatic Translation)
 saving-changes=Збереження змін... (Automatic Translation)
