--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -55,6 +55,7 @@ prioritize-experience=Kinh nghiệm ưu tiên (Automatic Translation)
 publish-page=Xuất bản trang (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Việc giảm số lượng các cột sẽ mất nội dung được thêm vào để xóa cột. Bạn có chắc bạn muốn tiếp tục không? (Automatic Translation)
 remove-background=Loại bỏ nền (Automatic Translation)
+reopen=Reopen (Automatic Copy)
 restore-values=Khôi phục giá trị (Automatic Translation)
 saved=Lưu (Automatic Translation)
 saving-changes=Lưu thay đổi... (Automatic Translation)
