--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -70,6 +70,7 @@ select-image=Επιλέξτε εικόνα (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Επιλέξτε την προέλευση περιεχομένου για αυτό το πρότυπο σελίδας εμφάνισης. (Automatic Translation)
 self=Αυτο (Automatic Translation)
 show-editable-areas=Εμφάνιση επεξεργάσιμων περιοχών (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Διάστημα μεταξύ των στηλών (Automatic Translation)
 specific-content=Συγκεκριμένο περιεχόμενο (Automatic Translation)
 text-alignment=Στοίχιση κειμένου (Automatic Translation)
