--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -70,6 +70,7 @@ select-image=Selecionar imagem
 select-the-content-source-for-this-display-page-template=Selecione a fonte do conteúdo para este modelo de página de exibição.
 self=Auto
 show-editable-areas=Mostrar áreas editáveis
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espaço entre colunas
 specific-content=Conteúdo específico
 text-alignment=Alinhamento de texto
