--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -70,6 +70,7 @@ select-image=Izberite sliko (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Izberite vir vsebine za to predlogo strani za prikaz. (Automatic Translation)
 self=Samo (Automatic Translation)
 show-editable-areas=Pokaži Editable območja (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Presledek med stolpci (Automatic Translation)
 specific-content=Posebna vsebina (Automatic Translation)
 text-alignment=Poravnava besedila (Automatic Translation)
