--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
@@ -70,6 +70,7 @@ select-image=இமேஜைத் தேர்ந்தெடுக்கவு
 select-the-content-source-for-this-display-page-template=இந்த Display Page டெம்ப்ளாட்டிற்கான content source-ஐத் தேர்ந்தெடுக்கவும்.
 self=சுயமான
 show-editable-areas=திருத்தப்படும் பகுதிகளைக் காண்க
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=பத்திகளுக்கிடையேயான இடைவெளி
 specific-content=குறிப்பிட்ட தகவல்
 text-alignment=டெக்ஸ்ட் அலைன்மென்ட்
