--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -70,6 +70,7 @@ select-image=เลือกรูปภาพ (Automatic Translation)
 select-the-content-source-for-this-display-page-template=เลือกแหล่งเนื้อหาสำหรับแม่แบบเพจที่แสดงนี้ (Automatic Translation)
 self=ด้วยตนเอง (Automatic Translation)
 show-editable-areas=แสดงพื้นที่สามารถแก้ไขได้ (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=ช่องว่างระหว่างคอลัมน์ (Automatic Translation)
 specific-content=เนื้อหาเฉพาะ (Automatic Translation)
 text-alignment=การจัดตำแหน่งข้อความ (Automatic Translation)
