--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -70,6 +70,7 @@ select-image=选择图像
 select-the-content-source-for-this-display-page-template=选择此显示页面模板的内容源。
 self=自身
 show-editable-areas=显示可编辑区域
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=列之间的间距
 specific-content=特定内容
 text-alignment=文本对齐
