--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -70,6 +70,7 @@ select-image=Valige pilt (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Saate valida kuvatava lehemalli sisuallika. (Automatic Translation)
 self=Ise (Automatic Translation)
 show-editable-areas=Näita muudetav piirkondades (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Vahe veergude vahel (Automatic Translation)
 specific-content=Konkreetne sisu (Automatic Translation)
 text-alignment=Teksti joondamine (Automatic Translation)
