--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -70,6 +70,7 @@ select-image=انتخاب تصویر (Automatic Translation)
 select-the-content-source-for-this-display-page-template=منبع محتوای این الگو صفحه نمایش را انتخاب کنید. (Automatic Translation)
 self=خود
 show-editable-areas=نمایش مناطق قابل ویرایش (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=فاصله بین ستونها (Automatic Translation)
 specific-content=محتوای خاص (Automatic Translation)
 text-alignment=ترازبندی متن (Automatic Translation)
