--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -70,6 +70,7 @@ select-image=Valitse Kuva
 select-the-content-source-for-this-display-page-template=Valitse sisällön lähde tälle näyttösivumallille.
 self=Itse
 show-editable-areas=Näytä Muokattavat Alueet
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Tila Sarakkeiden Välissä
 specific-content=Erityinen Sisältö
 text-alignment=Tekstin Tasaus
