--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -70,6 +70,7 @@ select-image=Sélectionner l'image
 select-the-content-source-for-this-display-page-template=Sélectionnez la source de contenu pour ce modèle de page d'affichage.
 self=Soi
 show-editable-areas=Afficher les Zones Modifiables
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espace entre les colonnes
 specific-content=Contenu spécifique
 text-alignment=Alignement du texte
