--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hr.properties
@@ -70,6 +70,7 @@ select-image=Select Image (Automatic Copy)
 select-the-content-source-for-this-display-page-template=Select the content source for this display page template. (Automatic Copy)
 self=Self (Automatic Copy)
 show-editable-areas=Show Editable Areas (Automatic Copy)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Space Between Columns (Automatic Copy)
 specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
