--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -70,6 +70,7 @@ select-image=Kép kiválasztása
 select-the-content-source-for-this-display-page-template=Válasszon tartalomforrást a megjelenítési-oldal sablonhoz.
 self=Önálló
 show-editable-areas=Szerkeszthető területek megjelenítése
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Oszlopok közötti hely
 specific-content=Specifikus tartalom
 text-alignment=Szöveg igazítása
