--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -70,6 +70,7 @@ select-image=Pilih gambar (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Pilih sumber konten untuk template halaman tampilan ini. (Automatic Translation)
 self=Diri (Automatic Translation)
 show-editable-areas=Daerah dapat diedit Tampilkan (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Ruang antara kolom (Automatic Translation)
 specific-content=Konten khusus (Automatic Translation)
 text-alignment=Perataan teks (Automatic Translation)
