--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -70,6 +70,7 @@ select-image=Wybierz obraz (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Wybierz źródło zawartości dla tego szablonu strony wyświetlanej. (Automatic Translation)
 self=Siebie (Automatic Translation)
 show-editable-areas=Pokaż obszary edytowalne (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Odstęp między kolumnami (Automatic Translation)
 specific-content=Konkretna treść (Automatic Translation)
 text-alignment=Wyrównanie tekstu (Automatic Translation)
