--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -71,6 +71,7 @@ select-template=Избор на шаблон (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Изберете източника на съдържание за този шаблон на показвана страница. (Automatic Translation)
 self=Самостоятелно (Automatic Translation)
 show-editable-areas=Показване на редактируеми области (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Разстояние между колоните (Automatic Translation)
 specific-content=Специфично съдържание (Automatic Translation)
 text-alignment=Подравняване на текст (Automatic Translation)
