--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -71,6 +71,7 @@ select-template=Select Template (Automatic Copy)
 select-the-content-source-for-this-display-page-template=Wählen Sie die Content-Quelle für die Vorlage dieser Anzeigeseite.
 self=Ich
 show-editable-areas=Bereiche anzeigen, die bearbeitet werden können
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Abstand zwischen Spalten
 specific-content=Spezifischer Content
 text-alignment=Textausrichtung
