--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -71,6 +71,7 @@ select-template=Seleccionar plantilla (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Seleccione el origen de contenido para esta plantilla de página de visualización.
 self=Auto
 show-editable-areas=Mostrar áreas editables
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espacio entre columnas
 specific-content=Contenido específico
 text-alignment=Alineación del texto
