--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
@@ -71,6 +71,7 @@ select-template=टेम्पलेट का चयन करें (Automati
 select-the-content-source-for-this-display-page-template=इस प्रदर्शन पृष्ठ टेंपलेट के लिए सामग्री स्रोत का चयन करें । (Automatic Translation)
 self=स्वयं (Automatic Translation)
 show-editable-areas=संपादन योग्य क्षेत्र दिखाएं (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=स्तंभों के बीच रिक्ति (Automatic Translation)
 specific-content=विशिष्ट सामग्री (Automatic Translation)
 text-alignment=पाठ संरेखण (Automatic Translation)
