--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -71,6 +71,7 @@ select-template=בחר תבנית (Automatic Translation)
 select-the-content-source-for-this-display-page-template=בחר את מקור התוכן עבור תבנית דף תצוגה זו. (Automatic Translation)
 self=האני (Automatic Translation)
 show-editable-areas=מראים אזורים ניתנים לעריכה (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=מרווח בין עמודות (Automatic Translation)
 specific-content=תוכן ספציפי (Automatic Translation)
 text-alignment=יישור טקסט (Automatic Translation)
