--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -71,6 +71,7 @@ select-template=Select Template (Automatic Copy)
 select-the-content-source-for-this-display-page-template=このディスプレイページテンプレートのコンテンツソースを選択してください。
 self=自身
 show-editable-areas=編集可能なエリアを表示
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=カラム間のスペース
 specific-content=特定のコンテンツ
 text-alignment=テキストの位置
