--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -71,6 +71,7 @@ select-template=Pasirinkite šablonas (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Pasirinkite šio rodymo puslapio šablono turinio šaltinį. (Automatic Translation)
 self=Savarankiškai (Automatic Translation)
 show-editable-areas=Rodyti redaguojamas sritis (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Atstumas tarp stulpelių (Automatic Translation)
 specific-content=Konkretus turinys (Automatic Translation)
 text-alignment=Teksto lygiuotė (Automatic Translation)
