--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -71,6 +71,7 @@ select-template=Select Template (Automatic Copy)
 select-the-content-source-for-this-display-page-template=Selecteer de inhoudsbron voor deze weergavepaginasjabloon.
 self=Zelf
 show-editable-areas=Bewerkbare delen tonen
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Ruimte tussen kolommen
 specific-content=Specifieke inhoud
 text-alignment=Tekstuitlijning
