--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -71,6 +71,7 @@ select-template=Selectare șablon (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selectați sursa de conținut pentru acest șablon de pagină de afișare. (Automatic Translation)
 self=Auto (Automatic Translation)
 show-editable-areas=Arată zone editabile (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Spaţiu între coloane (Automatic Translation)
 specific-content=Continut specific (Automatic Translation)
 text-alignment=Aliniere text (Automatic Translation)
