--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -71,6 +71,7 @@ select-template=Выберите шаблон (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Выберите источник содержимого для шаблона страницы отображения. (Automatic Translation)
 self=Самоуправления (Automatic Translation)
 show-editable-areas=Показать редактируемых областей (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Расстояние между столбцами (Automatic Translation)
 specific-content=Конкретный контент (Automatic Translation)
 text-alignment=Выравнивание текста (Automatic Translation)
