--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -71,6 +71,7 @@ select-template=Vybrať šablónu (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Vyberte zdroj obsahu pre túto šablónu zobrazovaného stránky. (Automatic Translation)
 self=Samostatne (Automatic Translation)
 show-editable-areas=Zobraziť upraviteľných oblastí (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Medzera medzi stĺpcami (Automatic Translation)
 specific-content=Špecifický obsah (Automatic Translation)
 text-alignment=Zarovnanie textu (Automatic Translation)
