--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -71,6 +71,7 @@ select-template=Виберіть шаблон (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Виберіть Джерело вмісту для цього шаблона відображення. (Automatic Translation)
 self=Самоврядування (Automatic Translation)
 show-editable-areas=Показати редагованими областями (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Інтервал між колонками (Automatic Translation)
 specific-content=Конкретний вміст (Automatic Translation)
 text-alignment=Вирівнювання тексту (Automatic Translation)
