--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -71,6 +71,7 @@ select-template=Chọn mẫu (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Chọn nguồn nội dung cho mẫu trang hiển thị này. (Automatic Translation)
 self=Tự (Automatic Translation)
 show-editable-areas=Hiển thị các khu vực có thể chỉnh sửa (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Không gian giữa các cột (Automatic Translation)
 specific-content=Nội dung cụ thể (Automatic Translation)
 text-alignment=Căn chỉnh văn bản (Automatic Translation)
