--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -71,6 +71,7 @@ select-template=選擇範本 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=選擇此顯示頁範本的內容源。 (Automatic Translation)
 self=自我 (Automatic Translation)
 show-editable-areas=顯示可編輯區域 (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=列之間的空間 (Automatic Translation)
 specific-content=特定內容 (Automatic Translation)
 text-alignment=文本對齊 (Automatic Translation)
