--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -71,6 +71,7 @@ select-template=تحديد قالب (Automatic Translation)
 select-the-content-source-for-this-display-page-template=حدد مصدر المحتوى لقالب صفحة العرض هذه.
 self=ذاتي
 show-editable-areas=إظهار المناطق القابلة للتحرير
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=مسافة بين الأعمدة
 specific-content=محتوى خاص
 text-alignment=محاذاة النص
