--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -71,6 +71,7 @@ select-template=Seleccioneu plantilla (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Seleccioneu la font del contingut de la plantilla d'aquesta pàgina de visualització.
 self=Jo
 show-editable-areas=Mostra les àrees editables
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Espai entre columnes
 specific-content=Contingut específic
 text-alignment=Alineació del text
