--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -71,6 +71,7 @@ select-template=Vybrat šablonu (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Vyberte zdroj obsahu pro tuto šablonu stránky zobrazení. (Automatic Translation)
 self=Já (Automatic Translation)
 show-editable-areas=Zobrazit upravitelných oblastí (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Mezera mezi sloupci (Automatic Translation)
 specific-content=Specifický obsah (Automatic Translation)
 text-alignment=Zarovnání textu (Automatic Translation)
