--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -71,6 +71,7 @@ select-template=Seleziona modello (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selezionare l'origine del contenuto per questo modello di pagina di visualizzazione. (Automatic Translation)
 self=stesso (Automatic Translation)
 show-editable-areas=Visualizza aree modificabili (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Spazio tra le colonne (Automatic Translation)
 specific-content=Contenuto specifico (Automatic Translation)
 text-alignment=Allineamento del testo (Automatic Translation)
