--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -71,6 +71,7 @@ select-template=템플릿 선택 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=이 표시 페이지 템플릿에 대 한 콘텐츠 원본을 선택 합니다. (Automatic Translation)
 self=자기 (Automatic Translation)
 show-editable-areas=편집 가능한 영역을 표시 (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=열 사이의 간격 (Automatic Translation)
 specific-content=특정 콘텐츠 (Automatic Translation)
 text-alignment=텍스트 맞춤 (Automatic Translation)
