--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -71,6 +71,7 @@ select-template=Velg mal (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Velg innholdskilden for denne visningsside malen. (Automatic Translation)
 self=Selv (Automatic Translation)
 show-editable-areas=Vis redigerbare områder (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Avstanden mellom kolonnene (Automatic Translation)
 specific-content=Spesifikt innhold (Automatic Translation)
 text-alignment=Tekstjustering (Automatic Translation)
