--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -71,6 +71,7 @@ select-template=Select Template (Automatic Copy)
 select-the-content-source-for-this-display-page-template=Välj innehållskälla för den här mallen för visningssida.
 self=Själv
 show-editable-areas=Visa redigerbara områden
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Utrymme mellan kolumner
 specific-content=Särskilt innehåll
 text-alignment=Textjustering
