--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -71,6 +71,7 @@ select-template=Şablon seç (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Bu ekran sayfası şablonunun içerik kaynağını seçin. (Automatic Translation)
 self=Öz (Automatic Translation)
 show-editable-areas=Düzenlenebilir alanları göster: (Automatic Translation)
+show-resolved-comments=Show Resolved Comments (Automatic Copy)
 space-between-columns=Sütunlar arasındaki boşluk (Automatic Translation)
 specific-content=Spesifik Içerik (Automatic Translation)
 text-alignment=Metin hizalama (Automatic Translation)
